<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.oamk.kiertotalous.ui.DeliveryFormViewModel" />

        <variable
            name="formData"
            type="com.oamk.kiertotalous.ui.ImageItemData" />

        <variable
            name="parcelData"
            type="com.oamk.kiertotalous.ui.ParcelItemData" />

        <variable
            name="onTextChanged"
            type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@{viewModel.date}"
                    app:layout_constraintBottom_toTopOf="@id/siteNameTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/siteNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="16sp"
                    android:text="@{viewModel.siteName}"
                    app:layout_constraintBottom_toTopOf="@id/weightLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/timeTextView" />

                <LinearLayout
                    android:id="@+id/weightLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toTopOf="@id/addParcelLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/siteNameTextView">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/weightInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:hint="@string/weight_kg">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@null"
                            android:textSize="16sp"
                            android:inputType="numberDecimal"
                            android:digits="0123456789."
                            android:imeOptions="actionNext"
                            android:nextFocusDown="@+id/addParcelLayout"
                            android:text="@{viewModel.weightResult}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/deviceStatusImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_bluetooth_disconnected"
                        android:adjustViewBounds="true" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addParcelLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/parcelsRecyclerView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weightLayout">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="80dp"
                        android:hint="@string/count"
                        android:layout_marginEnd="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textCursorDrawable="@null"
                            android:textSize="16sp"
                            android:inputType="number"
                            android:digits="0123456789"
                            android:imeOptions="actionNext"
                            android:nextFocusDown="@+id/info" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/typeSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/entries_parcel_values" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/addParcelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:elevation="0dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/green"
                        android:visibility="visible"
                        app:elevation="0dp"
                        app:fabCustomSize="40dp"
                        app:maxImageSize="35dp"
                        app:backgroundTint="@color/green"
                        app:srcCompat="@drawable/ic_add" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/parcelsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="-5dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@id/info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addParcelLayout"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/list_item_parcel" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/additional_info"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toTopOf="@id/takePictureButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/parcelsRecyclerView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/takePictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/green"
                    app:elevation="0dp"
                    app:fabCustomSize="60dp"
                    app:maxImageSize="35dp"
                    app:backgroundTint="@color/green"
                    app:srcCompat="@drawable/ic_add_photo"
                    app:visibility="@{viewModel.isProgressVisible ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@id/attachmentsRecyclerView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info" />

                <androidx.core.widget.ContentLoadingProgressBar
                    style="?android:progressBarStyleLarge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/green"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    app:visibility="@{viewModel.isProgressVisible ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toTopOf="@id/loginButton"
                    app:layout_constraintBottom_toBottomOf="@id/loginButton"
                    app:layout_constraintStart_toStartOf="@id/loginButton"
                    app:layout_constraintEnd_toEndOf="@id/loginButton" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/attachmentsRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:clipToPadding="false"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/list_item_image"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/takePictureButton" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/submitFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/send"
            app:visibility="@{viewModel.isProgressVisible ? View.GONE : View.VISIBLE}" />

    <View
        android:id="@+id/focusableView"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>
</layout>
